Update to sbt 2.0.0, replace sbt-revolver with sbt-reload
- Replace sbt-revolver with sbt-reload 0.0.2
- Remove custom reStartTest (use Test/runReload instead)
- Set Test/run/mainClass to webjars.WebJarsTestApp
- Bump sbt-webjars to 0.0.6 (sbt 2.x compatible)
- Mark runTest @transient (Unit return type)